--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 APScheduler==3.10.4
+black==24.10.0
 blinker==1.8.2
 cffi==1.17.1
 click==8.1.7
@@ -12,9 +13,12 @@ Jinja2==3.1.4
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
 matplotlib==3.9.2
+mypy-extensions==1.0.0
 numpy==2.1.3
 packaging==24.2
+pathspec==0.12.1
 pillow==11.0.0
+platformdirs==4.3.6
 psutil==6.1.0
 pycparser==2.22
 pyOpenSSL==24.2.1
